[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "disco_lang_kernel"
author = "Ryan Yates"
author-email = "fryguybob@gmail.com"
home-page = "https://github.com/fryguybob/disco_lang_kernel"
requires = ["pexpect (>=4.0)", "ipykernel"]
description-file = "README.rst"
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]

